recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:16: error: reassignment to val
    levels=levels-1
          ^